Fix: inventory to work with household